<resources>
    <string name="app_name">FYNDHR</string>
    <string name="username">USERNAME</string>
    <string name="back1">Back</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="relationship">Relationship:</string>
    <string name="location">Location:</string>
    <string name="review">Review</string>
    <string name="title_activity_create_account">CreateAccount</string>
</resources>
